--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.2",
-        "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20",
+        "sequelize": "^6.28.0",
+        "sqlite3": "^5.1.4"
     }
 }
